# AppScope

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml  Dockerfile  Dockerfile.runtime
backend/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/[appId]/: page.tsx
frontend/src/lib/: api.ts
scripts/: setup-server.sh
sdk/: package.json
sdk/src/: index.ts
